# JANUS

./: GA.py  JANUS.py  NN.py  README.md  crossover.py  crossover_parr.py  fragment_prep.py  mutate.py  mutate_parr.py  params_init.py  pyproject.toml  setup.cfg  setup.py  submit.sh
DATA/: fragment_prep.py  sample_start_smiles.txt
RESULTS/: README.md  init_mols.txt
src/janus/: __init__.py  crossover.py  features.py  fragment.py  janus.py  mutate.py  network.py  utils.py
tests/: default_params.yml  example.py
tests/DATA/: sample_random_smiles.txt  sample_start_smiles.txt
