[metadata]
name = janus-ga
version = 1.0.3
description = JANUS: Parallel Tempered Genetic Algorithm Guided by Deep Neural Networks for Inverse Molecular Design
long_description = file: README.md
long_description_content_type = text/markdown
author = Gary Tom, AkshatKumar Nigam, Robert Pollice, Alán Aspuru-Guzik 
author_email = akshat.nigam@mail.utoronto.ca
url= https://github.com/aspuru-guzik-group/janus
license = Apache License 2.0
keywords =  Genetic Algorithm, Inverse Molecular Design, Deep Neural Networks
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    torch >= 1.9.0
    selfies == 1.0.3
    numpy >= 1.17.0
    pyyaml >= 6.0

[options.packages.find]
where = src


